Исправил опечатки в ErrorHandler и CompilationRepository